[package]
name = "relay-bam-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Relay BAM Plugin Team"]
description = "A V1 Bundle Forwarder Plugin for Solana's Block Assembly Marketplace (BAM)"
license = "MIT"

[lib]
name = "relay_bam_plugin"
crate-type = ["cdylib"]  # Creates .so file for dynamic loading

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3