[package]
name = "relay-bam-plugin"
version = "0.3.0"
edition = "2021"
authors = ["Relay BAM Plugin Team"]
description = "Simulated BAM plugin development framework: design, test and benchmark Solana block-building plugins without live network access."
license = "MIT"

[lib]
name = "relay_bam_plugin"
crate-type = ["cdylib", "rlib"]  # Creates .so file for dynamic loading and allows Rust tests

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
once_cell = "1.19"

# V2 Oracle dependencies
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["rt"] }
lru = "0.12"
rust_decimal = "1.0"
hex = "0.4"
base64 = "0.21"

[features]
default = ["oracle", "institutional"]
oracle = []
institutional = []

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11"
proptest = "1.0"



[profile.release]
lto = true
codegen-units = 1
opt-level = 3